--- a/app/views/users/userdashboard.html.erb
+++ b/app/views/users/userdashboard.html.erb
@@ -240,7 +240,7 @@
                 <div class="well well-lg rounded">
                     <div class="row">
                         <div class="col-xs-12 col-sm-2 col-md-2 domain padding">
-                            <%= image_tag("blood.png", class: "iimg-center", height: "100", width:"100") %><br>
+                            <%= image_tag("blood.png", class: "img-center", height: "100", width:"100") %><br>
 
                             <span>Blood</span><br>
                             <br>
